...
                        background: Padding(
                          padding: const EdgeInsets.fromLTRB(20, 60, 20, 0),
                          child: Column(
                            crossAxisAlignment: CrossAxisAlignment.start,
                            children: [
                              Text(
                                'Welcome Back,',
                                style: theme.textTheme.bodyMedium?.copyWith(color: Colors.grey),
                              ),
                              BlocBuilder<AuthBloc, AuthState>(
                                builder: (context, state) {
                                  String name = 'User';
                                  if (state is Authenticated) {
...
